tests/baselines/reference/collisionThisExpressionAndFunctionInGlobal.errors.txt
==== tests/cases/compiler/collisionThisExpressionAndFunctionInGlobal.ts (1 errors) ====
    function _this() { //Error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
        return 10;
    ~~~~~~~~~~~~~~
    }
    ~
!!! error TS2200: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
    var f = () => this;